--- a/src/app/debug-window/debug-window.component.html
+++ b/src/app/debug-window/debug-window.component.html
@@ -26,9 +26,9 @@
   </ion-segment>
 
   <div *ngIf="segment == 'general'">
-    <div *ngIf="myDevice">
-      <p><b>App Version: </b> {{ myDevice.appVersion }}</p>
-      <p><b>App Build: </b> {{ myDevice.appBuild }}</p>
+    <div *ngIf="deviceInfo">
+      <p><b>App Version: </b> {{ appInfo.version }}</p>
+      <p><b>App Build: </b> {{ appInfo.build }}</p>
     </div>
 
     <p><b>Location tracking enabled: </b> {{ trackingRunning }}</p>
@@ -108,7 +108,7 @@
   </div>
 
   <div *ngIf="segment == 'device'">
-    <p *ngFor="let item of myDevice | keyvalue">
+    <p *ngFor="let item of deviceInfo | keyvalue">
       <b>{{ item.key }}: </b> {{ item.value }}
     </p>
   </div>
